--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
             />
           </svg>
 
-          <p class="status-value">{{.valueWater}} m/s</p>
+          <p class="status-value">{{.valueWater}} m</p>
           <div 
             {{if eq .statusWater "Bahaya"}} class="status-condition danger"{{end}}
             {{if eq .statusWater "Siaga"}} class="status-condition warning"{{end}}
@@ -82,19 +82,6 @@
         </div>
       </div>
     </div>
-    <!-- <div class="container p-5 text-center">
-        <h1>Weather Status</h1>
-        <div class="row gx-5 mt-5">
-          <div class="col-md-6 border bg-light">
-            <h3>GalihAPP</h3>
-           <h5>50km/s</h5>
-          </div>
-          <div class="col-md-6">
-            <div class="p-3 border bg-light">Custom column padding</div>
-          </div>
-        </div>
-      </div> -->
-    <!-- <li{{if eq .test "Halo"}} class="active"{{end}}><a href="/">Home</a></li> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
